--- a/video/index.html
+++ b/video/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <div class="container show-controls">
         <div class="wrapper">
             <div class="video-timeline">
@@ -55,7 +56,7 @@
                 </li>
             </ul>
         </div>
-        <video src="dummyvid.mp4"></video>
+        <video src="dummy-demo.mp4"></video>
     </div>
 
     <script src="script.js"></script>
