--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <img src="images/logo-final-withoutname.png" alt="Your Logo" class="logo-outside">
+    <img src="logo-final-withoutname.png" alt="Your Logo" class="logo-outside">
    
     
     
