--- a/courses.html
+++ b/courses.html
@@ -32,12 +32,12 @@
     <div class="courses-section">
         <div class="course-row">
            <div class="image-course">
-            <img src="images\20240107_094002_0000.png" alt="Course 1 Thumbnail" class="course-thumbnail">
+            <a href="course_2.html"> <img src="images\20240107_094002_0000.png" alt="Course 1 Thumbnail" class="course-thumbnail"></a>
         </div>
             <div class="course-details">
-                <h2>Course 1 Title</h2>
+              <a href="course_2.html">   <h2>Course 1 Title</h2>
                 <p>Description of Course 1 goes here.</p>
-                <p class="price">$99.99</p>
+                <p class="price">$99.99</p></a>
             </div>
         </div>
 
@@ -83,3 +83,6 @@
 <script src="courses.js"></script>
 </body>
 </html>
+
+<!-- <i class="fa-regular fa-star"></i> -->
+<!-- <i class="fa-solid fa-star"></i> -->
