--- a/video/index.html
+++ b/video/index.html
@@ -56,7 +56,7 @@
                 </li>
             </ul>
         </div>
-        <video src="dummy-demo.mp4"></video>
+        <video src="dummyvid.mp4"></video>
     </div>
 
     <script src="script.js"></script>
